# HDCU

./: README.md  RTL-HDC_Unit.vhd  dsp_functions.h  riscv-opc.c  riscv-opc.h
T13x/: src_files.yml
T13x/klessydra-t1-3th/: ID_STAGE.vhd  PKG_RiscV_Klessydra.vhd  RTL-Accumulator.vhd  RTL-CSR_Unit.vhd  RTL-Debug_Unit.vhd  RTL-HDC_Unit.vhd  RTL-ID_STAGE.vhd  RTL-IE_STAGE.vhd  RTL-Load_Store_Unit.vhd  RTL-Processing_Pipeline.vhd  RTL-Program_Counter_unit.vhd  RTL-Registerfile.vhd  RTL-Scratchpad_Memory_Interface.vhd  STR-Klessydra_top.vhd
T13x/pics/: Core_HDCU_3_recolored.eps  HDCU.eps
hdc_libs/: CMakeLists.txt
hdc_libs/inc/: hdc_class.hpp  hdc_defines.hpp  hdc_tests.hpp  hv_struct.hpp
hdc_libs/src/: hdc_class.cpp  hv_struct.cpp
klessydra_hdcu_tests/: CMakeLists.txt  cmake_install.cmake
klessydra_hdcu_tests/HDCU_benchmark/: CMakeLists.txt  HDCU_benchmark.cpp
klessydra_hdcu_tests/HV_binding/: CMakeLists.txt  VecBinding.cpp
klessydra_hdcu_tests/HV_bundling/: CMakeLists.txt  VecBundling.cpp
klessydra_hdcu_tests/HV_clipping/: CMakeLists.txt  VecClipping.cpp
klessydra_hdcu_tests/HV_permutation/: CMakeLists.txt  HVPermutation.cpp
klessydra_hdcu_tests/HV_search/: CMakeLists.txt  HVSearch.cpp
klessydra_hdcu_tests/HV_similarity/: CMakeLists.txt  HVSimilarity.cpp
